Fix T46002: mathutils.geometry.intersect_line_line_2d doesn't operate on lines, but on line segments.

Ugly issue really, but at least doc now matches behavior of the function. :|